// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render text for viewing multiple expenses 1`] = `
<h3>
  Viewing 
  3 expenses
   totalling 
  $1,141.95
</h3>
`;

exports[`should render text for viewing single expense 1`] = `
<h3>
  Viewing 
  1 expense
   totalling 
  $1.95
</h3>
`;
